--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "my-express-app",
+  "version": "1.0.0",
+  "engines": {
+    "node": ">=18"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "@google/genai": "^1.14.0",
     "bcryptjs": "^3.0.2",
